@@ -183,11 +183,11 @@ result = setup(
                 'gourmet.plugins.key_editor',
                 'gourmet.plugins.nutritional_information',
                 'gourmet.plugins.unit_converter',
-                'gourmet.plugins.exporters.import_export',
-                'gourmet.plugins.exporters.import_export.gxml_plugin',
-                'gourmet.plugins.exporters.import_export.html_plugin',
-                'gourmet.plugins.exporters.import_export.mealmaster_plugin',                
-                'gourmet.plugins.exporters.import_export.pdf_plugin',
+                'gourmet.plugins.import_export',
+                'gourmet.plugins.import_export.gxml_plugin',
+                'gourmet.plugins.import_export.html_plugin',
+                'gourmet.plugins.import_export.mealmaster_plugin',                
+                'gourmet.plugins.import_export.pdf_plugin',
                 ],
     package_data = {'gourmet': ['plugins/*.gourmet-plugin','plugins/*/*.gourmet-plugin','plugins/*.glade','plugins/*/*.glade']},
     package_dir = {'gourmet' : os.path.join('src','lib')},
